--- a/subPage/ints/css/leaveWord.css
+++ b/subPage/ints/css/leaveWord.css
@@ -1,131 +1,131 @@
-body{
-    background-color: #bbb;
+body {
+    background-color: #ccc;
 }
-.leaveWordsBox{
-    width:800px;
+.bg-b6e5ff {
+    background-color: #b6e5ff;
+}
+.leaveWordsBox {
+    width: 800px;
     margin: 0 auto;
-
     font-size: 1.5rem;
 }
-.leaveWords{
-  width: 100%;
+.leaveWords {
+    width: 100%;
     background-color: #eee;
 }
-.leaveWords dt{
+.leaveWords dt {
     background-color: #999;
     color: #ffffff;
-    font-size:2rem;
+    font-size: 2rem;
     line-height: 40px;
     height: 40px;
     padding-left: 20px;
-    border-left:6px solid #32a8ff;
+    border-left: 6px solid #32a8ff;
 }
-.leaveWords dd:nth-last-child(1) ul{
+.leaveWords dd:nth-last-child(1) ul {
     border-bottom: none;
 }
-
-
-.leaveWords ul{
+.leaveWords ul {
     margin: 0 6%;
     border-bottom: dotted 1px #aaa;
     margin-bottom: 20px;
     padding-bottom: 10px;
-
 }
-.leaveWords ul li{
+.leaveWords ul li {
     padding: 0 50px;
 }
-
-.leaveWords ul li .nameAndImg{
+.leaveWords ul li .nameAndImg {
     overflow: hidden;
-    height:40px;
+    height: 40px;
     line-height: 40px;
 }
-.leaveWords ul .initText{
+.leaveWords ul .initText {
     padding: 0;
 }
-
-.leaveWords ul li span{
+.leaveWords ul li span {
     padding-right: 10px;
     float: left;
 }
-.leaveWords ul li img{
+.leaveWords ul li img {
     float: left;
     padding: 5px 0;
     padding-right: 10px;
 }
-.leaveWords ul li .accName{
+.leaveWords ul li .accName {
     color: #00a9e0;
     cursor: pointer;
-
 }
-
-.leaveWords ul li p{
-    padding:0 40px
+.leaveWords ul li p {
+    padding: 0 40px;
+    overflow: hidden;
 }
-.leaveWords ul li .LeaWordTime{
+.leaveWords ul li p .lWreply {
+    background-color: #999;
+    color: #fff;
+    text-align: center;
+    padding-left: 8px;
+    margin-left: 20px;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+.leaveWords ul li p .lWreply:hover {
+    background-color: #00a9e0;
+    color: #000;
+}
+.leaveWords ul li .LeaWordTime {
     color: #aaaaaa;
 }
-
-.leaveForm{
-    width:700px;
-    background-color: #b6e5ff;
+.leaveForm {
+    width: 800px;
+    background-color: #eee;
     margin-bottom: 100px;
     padding: 0 50px;
     padding-bottom: 20px;
     overflow: hidden;
-
-
-
+}
+.leaveForm .lwconts {
+    display: none;
+}
+.leaveFormHf {
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
-    top: 0;
-    left: 0;
-
+    background-color: transparent;
+    margin: 0;
+    padding: 0;
 }
-.leaveFormHf .leaveForm{
-    position: absolute;
-    left:50%;
-    bottom:0;
-
-    margin:0 0 0 -400px;
-
-
-}
-
-
-.leaveForm .leaveWordsTitle{
+.leaveForm .leaveWordsTitle {
     /*background-color: #999;*/
     height: 50px;
     line-height: 50px;
     margin: 20px 0;
     color: #4a5764;
 }
-.leaveForm .leaveWordsTitle h4{
+.leaveForm .leaveWordsTitle h4 {
     /*padding-left: 50px;*/
+    color: #0071b1;
+    cursor: pointer;
 }
-.leaveForm label{
+.leaveForm label {
     float: left;
-    width:10%;
+    width: 10%;
 }
-.leaveForm input{
-    width:80%;
+.leaveForm input {
+    width: 80%;
     margin-bottom: 20px;
     height: 30px;
 }
-.leaveForm textarea{
-    width:80%;
+.leaveForm textarea {
+    width: 80%;
     max-width: 80%;
     min-height: 60px;
 }
-.leaveForm .accLeWould{
+.leaveForm .accLeWould {
     background-color: #0071b1;
     color: #ffffff;
     text-align: center;
-    height:30px;
-    line-height:30px;
-    width:100%;
+    height: 30px;
+    line-height: 30px;
+    width: 100%;
     font-size: 2rem;
     border: none;
     margin-top: 40px;
