--- a/subPage/ints/css/leaveWord.less
+++ b/subPage/ints/css/leaveWord.less
@@ -18,11 +18,25 @@ body{
   background-color: #999;
   color: #ffffff;
   font-size:2rem;
-  line-height: 40px;
-  height: 40px;
+  line-height: 80px;
+  height: 80px;
   padding-left: 20px;
   border-left:6px solid #32a8ff;
+  //background: url("../images/heardBg02.jpg") no-repeat;
+  background: url("../images/heard0.jpg") no-repeat;
+  background-position: 50%;
+
+  h3{float: left; }
+  h6{float: right;
+    margin-right:25px;
+    margin-top:32px;
+    opacity: 0.42;
+    font-size:2.5rem;
+    cursor: pointer;
+  }
 }
+
+
 .leaveWords dd:nth-last-child(1) ul{
   border-bottom: none;
 }
