--- a/subPage/intsCell/css/leaveWord.less
+++ b/subPage/intsCell/css/leaveWord.less
@@ -125,7 +125,7 @@
   .leaveFormFlx{
     position:fixed;
     bottom: 0;
-    background-color: #80b2ff;
+    background-color: #ccc;
 
   }
   .leaveFormHf{
