--- a/subPage/intsCell/css/leaveWord.less
+++ b/subPage/intsCell/css/leaveWord.less
@@ -99,7 +99,7 @@ body{
     padding:0 1rem 0 3.4rem;
     overflow: hidden;
     .lWreply{
-      background-color: #aaa;
+      background-color: #ccc;
       color: #fff;
       text-align: center;
       padding-left: 0.4rem;
@@ -110,8 +110,8 @@ body{
       cursor: pointer;
     }
     .lWreply:hover{
-      background-color: #00a9e0;
-      color: #000;
+      background-color: #32a8ff;
+      color: #333;
     }
   }
 
@@ -121,32 +121,22 @@ body{
 
 
   .leaveForm{
-    //background-color: #eee;
-    //margin-bottom: 10rem;
     padding: 0 2rem;
     padding-bottom: 2rem;
     overflow: hidden;
 
     background: url("../images/bodyBg001.jpg");
     background-size:100px;
-    .lwconts{
-      //display: none;
-    }
   }
 
   .leaveFormFlx{
     position:fixed;
     bottom: 0;
-    //background-color: #ccc;
-/*    background: url("../images/bodyBg02.jpg");
-    background-size: 50px;*/
-
   }
   .leaveFormHf{
 
     width: 100%;
     height: 100%;
-    //background-color: #b6e5ff;
     background-color:transparent;
     margin:0;
     padding:0;
@@ -155,16 +145,12 @@ body{
 
 
   .leaveForm .leaveWordsTitle{
-    /*background-color: #999;*/
     height: 5rem;
     line-height: 5rem;
     margin: 2rem 0;
     color: #4a5764;
   }
   .leaveForm .leaveWordsTitle h4{
-    /*padding-left: 50px;*/
-    //color: #0071b1;
-    //cursor: pointer;
     float: left;
   }
   .leaveForm .leaveWordsTitle a{
@@ -205,7 +191,6 @@ body{
     background-size: 50px;
   }
   .leaveWords{
-    //background-color: #eee;
     background-color: #fdfdfd;
     font-size: 1.5rem;
   }
@@ -219,7 +204,6 @@ body{
     padding-left: 2rem;
     margin-bottom: 1rem;
     border-left:0.6rem solid #32a8ff;
-    //background: url("../images/heardBg02.jpg") no-repeat;
     background: url("../images/heard0.jpg") no-repeat;
     background-position: 50%;
 
@@ -254,7 +238,6 @@ body{
   }
   .leaveWords ul .initText{
     padding: 0;
-
   }
 
   .leaveWords ul li span{
@@ -276,7 +259,7 @@ body{
     padding:0 0 0 4rem;
     overflow: hidden;
     .lWreply{
-      background-color: #999;
+      background-color: #ccc;
       color: #fff;
       text-align: center;
       padding-left: 0.8rem;
@@ -286,8 +269,8 @@ body{
       cursor: pointer;
     }
     .lWreply:hover{
-      background-color: #00a9e0;
-      color: #000;
+      background-color:#32a8ff;
+      color: #333;
     }
   }
 
