--- a/subPage/intsCell/css/leaveWord.less
+++ b/subPage/intsCell/css/leaveWord.less
@@ -19,10 +19,14 @@ body{
 
 .leaveWords dd:nth-last-child(1) ul{
   border-bottom: none;
+
 }
 
 
 @media (min-width: 320px){
+  body{
+    background-color: #f9f9f9;
+  }
   .leaveWords{
     //background-color: rgba(238, 238, 238, 0.15);
     background-color: #fff;
@@ -63,7 +67,7 @@ body{
   }
 
   .leaveWords ul li{
-    padding: 0 0 0 2rem;
+    padding: 0 0 0 2.5rem;
     p{
       padding:0 1rem 0 3.4rem;
     }
@@ -85,8 +89,10 @@ body{
   }
   .leaveWords ul li img{
     float: left;
-    padding: 0.5rem 0;
-    padding-right:0.5rem;
+    width: 2.5rem;
+    //height:2.5rem;
+    margin: 0.5rem;
+    //padding-right:0.5rem;
     //border-radius: 50%;
   }
   .leaveWords ul li .accName{
@@ -108,6 +114,9 @@ body{
       font-size: 1rem;
       line-height: 1.5rem;
       cursor: pointer;
+
+      float: right;
+      margin-right: 2rem;
     }
     .lWreply:hover{
       background-color: #32a8ff;
@@ -158,17 +167,29 @@ body{
   }
   .leaveForm label{
     float: left;
-    width:10%;
+    width:15%;
+    i{
+      color: #ff1753;
+    }
   }
   .leaveForm input{
-    width:80%;
+    padding-left:1rem;
+    width:75%;
     margin-bottom: 20px;
     height: 30px;
   }
   .leaveForm textarea{
-    width:80%;
+    padding-left:1rem;
+    width:75%;
     max-width: 80%;
     min-height: 60px;
+    margin-bottom: 20px;
+  }
+  .leaveForm p{
+    color: #ff1753;
+    padding-left:6rem;
+    margin-top: -1.2rem;
+    display: none;
   }
   .leaveForm .accLeWould{
     background-color: #0071b1;
@@ -246,6 +267,7 @@ body{
   }
   .leaveWords ul li img{
     float: left;
+    width: 3.5rem;
     padding: 0.5rem 0;
     padding-right: 1rem;
   }
