--- a/subPage/intsCell/css/leaveWord.less
+++ b/subPage/intsCell/css/leaveWord.less
@@ -102,7 +102,7 @@ body{
   }
 
   .leaveWords ul li p{
-    padding:0 1rem 0 3.4rem;
+    padding:0 3.4rem;
     overflow: hidden;
     .lWreply{
       background-color: #ccc;
@@ -116,7 +116,7 @@ body{
       cursor: pointer;
 
       float: right;
-      margin-right: 2rem;
+      //margin-right: 2rem;
     }
     .lWreply:hover{
       background-color: #32a8ff;
