--- a/subPage/intsCell/css/leaveWord.less
+++ b/subPage/intsCell/css/leaveWord.less
@@ -116,7 +116,7 @@ body{
       cursor: pointer;
 
       float: right;
-      //margin-right: 2rem;
+      margin-right:0.5rem;
     }
     .lWreply:hover{
       background-color: #32a8ff;
