--- a/subPage/intsCell/css/leaveWord.less
+++ b/subPage/intsCell/css/leaveWord.less
@@ -137,7 +137,7 @@ body{
       margin-right:0.5rem;
     }
     .lWreply:hover{
-      background-color: #32a8ff;
+      background-color: #76cdff;
       color: #333;
     }
   }
@@ -164,6 +164,7 @@ body{
     padding: 0 2rem;
     padding-bottom: 2rem;
     overflow: hidden;
+    width: 100%;
 
     background: url("../images/bodyBg001.jpg");
     background-size:100px;
@@ -175,16 +176,6 @@ body{
     position:fixed;
     bottom: 0;
   }
-  .leaveFormHf{
-
-    width: 100%;
-    height: 100%;
-    background-color:transparent;
-    margin:0;
-    padding:0;
-  }
-
-
 
   .leaveForm .leaveWordsTitle{
     height: 5rem;
